// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-search-field Renders \`c-search-field\` correctly 1`] = `
<div
  class="layout c-search-field align-end"
>
  <div
    class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
  <c-action-btn-stub
    icon="search"
    tooltip="Search"
  />
  <c-action-btn-stub
    icon="clear"
    tooltip="Clear search input"
  />
</div>
`;

exports[`c-search-field Renders \`c-search-field\` correctly with combobox and items 1`] = `
<div
  class="layout c-search-field align-end"
>
  <div
    class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-select v-autocomplete"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="combobox"
      >
        <div
          class="v-select__slot"
        >
          <input
            autocomplete="off"
            type="text"
          />
          <input
            type="hidden"
            value="c-search-field"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  <c-action-btn-stub
    icon="search"
    tooltip="Search"
  />
  <c-action-btn-stub
    icon="clear"
    tooltip="Clear search input"
  />
</div>
`;

exports[`c-search-field Renders \`c-search-field\` correctly with combobox and items 2`] = `undefined`;
